--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dumb-cpu-emulator"
+name = "simple-cpu-emulator"
 version = "0.1.0"
 authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
 edition = "2018"
